force-app/main/default/objects/df_journal_dk__c/df_journal_dk__c.object-meta.xml
<CustomObject>
    <description>Journal for DFJ</description>
    <label>Journal DK</label>
    <nameField>
        <label>Journal DK Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal DKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>