force-app/main/default/objects/df_journal_dk__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal DKs</relationshipLabel>
    <relationshipName>Journal_DKs</relationshipName>
    <type>Lookup</type>
</CustomField>