force-app/main/default/objects/df_journal_dk__c/fields/add_escrow__c.field-meta.xml
<CustomField>
    <fullName>add_escrow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Arven båndlægges indtil arvingen når en specifik alder</description>
    <label>Skal arven båndlægges?</label>
    <type>Checkbox</type>
</CustomField>