force-app/main/default/objects/df_journal_dk__c/fields/additional_separate_property_con_9__c.field-meta.xml
<CustomField>
    <fullName>additional_separate_property_con_9__c</fullName>
    <description>Yderligere særejebetingelser</description>
    <label>Yderligere særejebetingelser f83b6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>