force-app/main/default/objects/df_journal_dk__c/fields/adresse_primr_vrge_brnetestament_107__c.field-meta.xml
<CustomField>
    <fullName>adresse_primr_vrge_brnetestament_107__c</fullName>
    <label>Adresse 522e1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>