force-app/main/default/objects/df_journal_dk__c/fields/adresse_samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>adresse_samejeoverenskomst__c</fullName>
    <label>Adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>