force-app/main/default/objects/df_journal_dk__c/fields/afdde_gteflles_fornavn__c.field-meta.xml
<CustomField>
    <fullName>afdde_gteflles_fornavn__c</fullName>
    <label>Afdøde ægtefælles fornavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>