force-app/main/default/objects/df_journal_dk__c/fields/afgiftsfrie_gaver_person2__c.field-meta.xml
<CustomField>
    <fullName>afgiftsfrie_gaver_person2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afgiftsfrie gaver?</label>
    <type>Checkbox</type>
</CustomField>