force-app/main/default/objects/df_journal_dk__c/fields/andet_specificerede_aktiver__c.field-meta.xml
<CustomField>
    <fullName>andet_specificerede_aktiver__c</fullName>
    <label>Andet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>