force-app/main/default/objects/df_journal_dk__c/fields/angiv_andel_i_brker__c.field-meta.xml
<CustomField>
    <fullName>angiv_andel_i_brker__c</fullName>
    <label>Angiv andel i brøker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>