force-app/main/default/objects/df_journal_dk__c/fields/are_all_children_grown_ups__c.field-meta.xml
<CustomField>
    <fullName>are_all_children_grown_ups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Er alle børn over 18 år?</description>
    <label>Er alle børn myndige?</label>
    <type>Checkbox</type>
</CustomField>