force-app/main/default/objects/df_journal_dk__c/fields/arvefordeling_single_picklist__c.field-meta.xml
<CustomField>
    <fullName>arvefordeling_single_picklist__c</fullName>
    <label>Arvefordeling (Single)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>alt_til_børn</fullName>
                <label>Alt til børn</label>
            </value>
            <value>
                <fullName>30_procent_reglen_single</fullName>
                <label>30% reglen</label>
            </value>
            <value>
                <fullName>procentfordeling_single</fullName>
                <label>Procentfordeling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>