force-app/main/default/objects/df_journal_dk__c/fields/belbets_strrelse__c.field-meta.xml
<CustomField>
    <fullName>belbets_strrelse__c</fullName>
    <label>Beløbets størrelse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>