force-app/main/default/objects/df_journal_dk__c/fields/beskriv_typen_af_gld__c.field-meta.xml
<CustomField>
    <fullName>beskriv_typen_af_gld__c</fullName>
    <label>Beskriv typen af gæld</label>
    <length>255</length>
    <type>Text</type>
</CustomField>