force-app/main/default/objects/df_journal_dk__c/fields/boolean_bosat_uden_for_dk__c.field-meta.xml
<CustomField>
    <fullName>boolean_bosat_uden_for_dk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Var en af jer bosat uden for Dan 0dd27</label>
    <type>Checkbox</type>
</CustomField>