force-app/main/default/objects/df_journal_dk__c/fields/boplsland__c.field-meta.xml
<CustomField>
    <fullName>boplsland__c</fullName>
    <label>Bopælsland</label>
    <length>255</length>
    <type>Text</type>
</CustomField>