force-app/main/default/objects/df_journal_dk__c/fields/bt_primr_vrge_fuldmgtig__c.field-meta.xml
<CustomField>
    <fullName>bt_primr_vrge_fuldmgtig__c</fullName>
    <label>Skal børnetestamentets primære v de1e6</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>bt_primr_vrge_ikke_fuldmgtig</fullName>
                <label>Skal ikke være fuldmægtig</label>
            </value>
            <value>
                <fullName>bt_primr_vrge_subsi_fuldmgtig</fullName>
                <label>Skal indsættes som subsidiær fuldmægtig</label>
            </value>
            <value>
                <fullName>bt_primr_vrge_primr_fuldmgtig</fullName>
                <label>Skal indsættes som primær fuldmægtig</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>