force-app/main/default/objects/df_journal_dk__c/fields/by_samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>by_samejeoverenskomst__c</fullName>
    <label>By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>