force-app/main/default/objects/df_journal_dk__c/fields/children_type__c.field-meta.xml
<CustomField>
    <fullName>children_type__c</fullName>
    <description>Er børn sammenbragte eller fælles?</description>
    <label>Type børn</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>common</fullName>
                <label>Fælles</label>
            </value>
            <value>
                <fullName>brought_together</fullName>
                <label>Sammenbragte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>