force-app/main/default/objects/df_journal_dk__c/fields/cohabiting_do_you_own_common_pro_18__c.field-meta.xml
<CustomField>
    <fullName>cohabiting_do_you_own_common_pro_18__c</fullName>
    <defaultValue>false</defaultValue>
    <description>F.eks. lejlighed, hus, sommerhus osv.</description>
    <label>Ejer i fast ejendom eller andet  30ddf</label>
    <type>Checkbox</type>
</CustomField>