force-app/main/default/objects/df_journal_dk__c/fields/cohabiting_should_requirements_a_19__c.field-meta.xml
<CustomField>
    <fullName>cohabiting_should_requirements_a_19__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal bestemmelser der omhandler børnene/andre arvinge vedvare?</description>
    <label>Skal bestemmelser der omhandler  2062e</label>
    <type>Checkbox</type>
</CustomField>