force-app/main/default/objects/df_journal_dk__c/fields/cohabiting_should_revoke_or_alte_21__c.field-meta.xml
<CustomField>
    <fullName>cohabiting_should_revoke_or_alte_21__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kræver enighed fra begge parter for evt. ændring</description>
    <label>Skal tilbagekaldelse eller ændri fa98e</label>
    <type>Checkbox</type>
</CustomField>