force-app/main/default/objects/df_journal_dk__c/fields/cohabiting_should_surviving_inhe_2__c.field-meta.xml
<CustomField>
    <fullName>cohabiting_should_surviving_inhe_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal længstlevende modtage arven som særeje?</description>
    <label>Skal længstlevende modtage arven c4df2</label>
    <type>Checkbox</type>
</CustomField>