force-app/main/default/objects/df_journal_dk__c/fields/cohabiting_should_testament_stil_20__c.field-meta.xml
<CustomField>
    <fullName>cohabiting_should_testament_stil_20__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal testamentet fortsat gælde hvis længstlevende blivet gift?</description>
    <label>Skal testamentet fortsat gælde h 6a7e7</label>
    <type>Checkbox</type>
</CustomField>