force-app/main/default/objects/df_journal_dk__c/fields/cohabiting_surviving_testament_r_30__c.field-meta.xml
<CustomField>
    <fullName>cohabiting_surviving_testament_r_30__c</fullName>
    <description>Længstlevendes testationsret</description>
    <label>Længstlevendes testationsret 604e5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ja</fullName>
                <label>Ja</label>
            </value>
            <value>
                <fullName>nej</fullName>
                <label>Nej</label>
            </value>
            <value>
                <fullName>50_percent</fullName>
                <label>50%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>