force-app/main/default/objects/df_journal_dk__c/fields/cpr_nummer_frste_6_cifre_person_38__c.field-meta.xml
<CustomField>
    <fullName>cpr_nummer_frste_6_cifre_person_38__c</fullName>
    <label>CPR nummer (Første 6 cifre) Pers 87ae8</label>
    <length>255</length>
    <type>Text</type>
</CustomField>