force-app/main/default/objects/df_journal_dk__c/fields/cpr_nummer_sidste_4_cifre_person_37__c.field-meta.xml
<CustomField>
    <fullName>cpr_nummer_sidste_4_cifre_person_37__c</fullName>
    <label>CPR nummer (Sidste 4 cifre) Pers f4162</label>
    <length>255</length>
    <type>Text</type>
</CustomField>