force-app/main/default/objects/df_journal_dk__c/fields/cprnummer_beboelsesret__c.field-meta.xml
<CustomField>
    <fullName>cprnummer_beboelsesret__c</fullName>
    <label>CPR-nummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>