force-app/main/default/objects/df_journal_dk__c/fields/date_of_marriage__c.field-meta.xml
<CustomField>
    <fullName>date_of_marriage__c</fullName>
    <description>Bryllupsdagens dato</description>
    <label>Dato for ægteskabsindgåelse</label>
    <type>DateTime</type>
</CustomField>