force-app/main/default/objects/df_journal_dk__c/fields/dato_for_notering_af_testamente__c.field-meta.xml
<CustomField>
    <fullName>dato_for_notering_af_testamente__c</fullName>
    <label>Dato for notering af testamente</label>
    <type>DateTime</type>
</CustomField>