force-app/main/default/objects/df_journal_dk__c/fields/dato_tingl_eksis_gtepagt__c.field-meta.xml
<CustomField>
    <fullName>dato_tingl_eksis_gtepagt__c</fullName>
    <label>Dato for tinglysning af den eksi a57dc</label>
    <type>DateTime</type>
</CustomField>