force-app/main/default/objects/df_journal_dk__c/fields/dato_underskr_eksis_gtepagt__c.field-meta.xml
<CustomField>
    <fullName>dato_underskr_eksis_gtepagt__c</fullName>
    <label>Dato for underskrift af den eksi e56ee</label>
    <type>DateTime</type>
</CustomField>