force-app/main/default/objects/df_journal_dk__c/fields/ddsdato_for_afdd_gteflle__c.field-meta.xml
<CustomField>
    <fullName>ddsdato_for_afdd_gteflle__c</fullName>
    <label>Dødsdato for afdød ægtefælle</label>
    <type>DateTime</type>
</CustomField>