force-app/main/default/objects/df_journal_dk__c/fields/do_you_own_common_property_toget_15__c.field-meta.xml
<CustomField>
    <fullName>do_you_own_common_property_toget_15__c</fullName>
    <defaultValue>false</defaultValue>
    <description>F.eks. lejlighed, hus, sommerhus osv.</description>
    <label>Ejer i fast ejendom eller andet  30ddf</label>
    <type>Checkbox</type>
</CustomField>