force-app/main/default/objects/df_journal_dk__c/fields/efternavn_beboelsesret__c.field-meta.xml
<CustomField>
    <fullName>efternavn_beboelsesret__c</fullName>
    <label>Efternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>