force-app/main/default/objects/df_journal_dk__c/fields/ejendommens_kbspris__c.field-meta.xml
<CustomField>
    <fullName>ejendommens_kbspris__c</fullName>
    <description>Indtastes som f.eks. &quot;1.200.000&quot;</description>
    <label>Ejendommens købspris</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>