force-app/main/default/objects/df_journal_dk__c/fields/ejendomstype_samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>ejendomstype_samejeoverenskomst__c</fullName>
    <label>Ejendomstype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>et_hus_samejeoverenskomst</fullName>
                <label>Et hus</label>
            </value>
            <value>
                <fullName>rækkehus_samejeoverenskomst</fullName>
                <label>Et rækkehus</label>
            </value>
            <value>
                <fullName>Ejerlejlighed_samejeoverenskomst</fullName>
                <label>En ejerlejlighed</label>
            </value>
            <value>
                <fullName>andelsbolig_samejeoverenskomst</fullName>
                <label>En andelsbolig</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>