force-app/main/default/objects/df_journal_dk__c/fields/eksisterer_der_allerede_en_gtepa_93__c.field-meta.xml
<CustomField>
    <fullName>eksisterer_der_allerede_en_gtepa_93__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hvis I har en ægtepagt i forvejen, vil den blive ugyldig, og den nye ægtepagt vil i stedet bestemme, hvad der skal gælde mellem jer som ægtefæller.</description>
    <label>Eksisterer der allerede en ægtep d8c3a</label>
    <type>Checkbox</type>
</CustomField>