force-app/main/default/objects/df_journal_dk__c/fields/email_person2__c.field-meta.xml
<CustomField>
    <fullName>email_person2__c</fullName>
    <description>Person 2 email</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>