force-app/main/default/objects/df_journal_dk__c/fields/engangsbelb_amount__c.field-meta.xml
<CustomField>
    <fullName>engangsbelb_amount__c</fullName>
    <label>Engangsbeløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>