force-app/main/default/objects/df_journal_dk__c/fields/er_adressen_forskellige_fra_den_82__c.field-meta.xml
<CustomField>
    <fullName>er_adressen_forskellige_fra_den_82__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Relevant hvis samejeoverenskomsten f.eks. skal dække over et sommerhus, som har anden adresse end den primære bolig</description>
    <label>Er boligen den samme adresse som fa660</label>
    <type>Checkbox</type>
</CustomField>