force-app/main/default/objects/df_journal_dk__c/fields/er_det_tidligere_testamente_et_n_43__c.field-meta.xml
<CustomField>
    <fullName>er_det_tidligere_testamente_et_n_43__c</fullName>
    <label>Er det tidligere testamente et n 1fdba</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>notartestamente_tidligere</fullName>
                <label>Notartestamente</label>
            </value>
            <value>
                <fullName>vidnetestamente_tidligere</fullName>
                <label>Vidnetestamente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>