force-app/main/default/objects/df_journal_dk__c/fields/er_fdenavn_forskelligt_fra_nuvre_103__c.field-meta.xml
<CustomField>
    <fullName>er_fdenavn_forskelligt_fra_nuvre_103__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hvis ja, sæt hak</description>
    <label>Er fødenavn forskelligt fra nuvæ 6e07f</label>
    <type>Checkbox</type>
</CustomField>