force-app/main/default/objects/df_journal_dk__c/fields/er_fuldmgtige_brn__c.field-meta.xml
<CustomField>
    <fullName>er_fuldmgtige_brn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Er fuldmægtige børn?</label>
    <type>Checkbox</type>
</CustomField>