force-app/main/default/objects/df_journal_dk__c/fields/er_fuldmgtige_en_af_dine_andre_a_65__c.field-meta.xml
<CustomField>
    <fullName>er_fuldmgtige_en_af_dine_andre_a_65__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Er fuldmægtige en af dine andre  b6a46</label>
    <type>Checkbox</type>
</CustomField>