force-app/main/default/objects/df_journal_dk__c/fields/er_fuldmgtige_vrger_person2__c.field-meta.xml
<CustomField>
    <fullName>er_fuldmgtige_vrger_person2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Er fuldmægtige værger?</label>
    <type>Checkbox</type>
</CustomField>