force-app/main/default/objects/df_journal_dk__c/fields/escrow_age__c.field-meta.xml
<CustomField>
    <fullName>escrow_age__c</fullName>
    <description>Alder for båndlæggelse (f.eks 18 år)</description>
    <label>Båndlæggelsesalder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>