force-app/main/default/objects/df_journal_dk__c/fields/fdeefternavn_p1__c.field-meta.xml
<CustomField>
    <fullName>fdeefternavn_p1__c</fullName>
    <label>Fødeefternavn (Person 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>