force-app/main/default/objects/df_journal_dk__c/fields/fdeefternavn_p2__c.field-meta.xml
<CustomField>
    <fullName>fdeefternavn_p2__c</fullName>
    <label>Fødeefternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>