force-app/main/default/objects/df_journal_dk__c/fields/fdefornavne_p1__c.field-meta.xml
<CustomField>
    <fullName>fdefornavne_p1__c</fullName>
    <label>Fødefornavn(e) (Person 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>