force-app/main/default/objects/df_journal_dk__c/fields/fdefornavne_p2__c.field-meta.xml
<CustomField>
    <fullName>fdefornavne_p2__c</fullName>
    <label>Fødefornavn(e)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>