force-app/main/default/objects/df_journal_dk__c/fields/findes_der_sorte_fr_arvefordelin_51__c.field-meta.xml
<CustomField>
    <fullName>findes_der_sorte_fr_arvefordelin_51__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Findes der sorte får? fd531</label>
    <type>Checkbox</type>
</CustomField>