force-app/main/default/objects/df_journal_dk__c/fields/findes_der_unskede_vrger__c.field-meta.xml
<CustomField>
    <fullName>findes_der_unskede_vrger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Findes der uønskede værger?</label>
    <type>Checkbox</type>
</CustomField>