force-app/main/default/objects/df_journal_dk__c/fields/flles_pension__c.field-meta.xml
<CustomField>
    <fullName>flles_pension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pension</label>
    <type>Checkbox</type>
</CustomField>