force-app/main/default/objects/df_journal_dk__c/fields/flles_virksomhed__c.field-meta.xml
<CustomField>
    <fullName>flles_virksomhed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virksomhed</label>
    <type>Checkbox</type>
</CustomField>