force-app/main/default/objects/df_journal_dk__c/fields/former_legal_wills__c.field-meta.xml
<CustomField>
    <fullName>former_legal_wills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Er der allerede oprettet et testamente som skal tages højde for?</description>
    <label>Har Du/I tidligere oprettet test 9b8db</label>
    <type>Checkbox</type>
</CustomField>