force-app/main/default/objects/df_journal_dk__c/fields/fornavn_beboelsesret__c.field-meta.xml
<CustomField>
    <fullName>fornavn_beboelsesret__c</fullName>
    <label>Fornavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>