force-app/main/default/objects/df_journal_dk__c/fields/gaver_til_velgrenhed_person2__c.field-meta.xml
<CustomField>
    <fullName>gaver_til_velgrenhed_person2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gaver til velgørenhed?</label>
    <type>Checkbox</type>
</CustomField>