force-app/main/default/objects/df_journal_dk__c/fields/generalfuldm_kan_overdrages__c.field-meta.xml
<CustomField>
    <fullName>generalfuldm_kan_overdrages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Berettiget til at indsætte en an 91e70</label>
    <type>Checkbox</type>
</CustomField>