force-app/main/default/objects/df_journal_dk__c/fields/gtepagt_nuv_civstat__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_nuv_civstat__c</fullName>
    <label>Nuværende civilstatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_allerede_gift</fullName>
                <label>Allerede gift</label>
            </value>
            <value>
                <fullName>gtepagt_skal_snart_giftes</fullName>
                <label>Skal snart giftes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>