force-app/main/default/objects/df_journal_dk__c/fields/gtepagt_reguleres_af_dansk_ret__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_reguleres_af_dansk_ret__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ønsker I at ægtepagten reguleres 48c67</label>
    <type>Checkbox</type>
</CustomField>