force-app/main/default/objects/df_journal_dk__c/fields/gtepagt_sreje_dato_fllseje__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sreje_dato_fllseje__c</fullName>
    <label>Dato særejet skal overgå til fæl 31156</label>
    <type>DateTime</type>
</CustomField>