force-app/main/default/objects/df_journal_dk__c/fields/gtepagt_sumdel_pristalsreg__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sumdel_pristalsreg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pristalsregulering</label>
    <type>Checkbox</type>
</CustomField>