force-app/main/default/objects/df_journal_dk__c/fields/gtepagt_sumdeling__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sumdeling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sumdeling</label>
    <type>Checkbox</type>
</CustomField>