force-app/main/default/objects/df_journal_dk__c/fields/gtepagt_sumdeling_belb__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sumdeling_belb__c</fullName>
    <label>Beløb til fælleseje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>