force-app/main/default/objects/df_journal_dk__c/fields/guardian_economy__c.field-meta.xml
<CustomField>
    <fullName>guardian_economy__c</fullName>
    <description>Værgens økonomi</description>
    <label>Skal værgen have adgang til et b e9b53</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>one_time_fee_for_guardian</fullName>
                <label>Engangsbeløb til værgen</label>
            </value>
            <value>
                <fullName>monthly_amount_per_child</fullName>
                <label>Månedligt pr. barn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>