force-app/main/default/objects/df_journal_dk__c/fields/har_kunden_nemid_person2__c.field-meta.xml
<CustomField>
    <fullName>har_kunden_nemid_person2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har kunden Nem-ID?</label>
    <type>Checkbox</type>
</CustomField>