force-app/main/default/objects/df_journal_dk__c/fields/has_children__c.field-meta.xml
<CustomField>
    <fullName>has_children__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gælder også voksne børn</description>
    <label>Har børn?</label>
    <type>Checkbox</type>
</CustomField>