force-app/main/default/objects/df_journal_dk__c/fields/hvad_er_vigtigt_for_kunden__c.field-meta.xml
<CustomField>
    <fullName>hvad_er_vigtigt_for_kunden__c</fullName>
    <description>Notér her hvis der er noget overordnet vigtigt, som juristen skal forholde sig til (Dette er en intern note)</description>
    <label>Hvad er vigtigt for kunden?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>