force-app/main/default/objects/df_journal_dk__c/fields/hvem_sidder_i_uskiftet_bo__c.field-meta.xml
<CustomField>
    <fullName>hvem_sidder_i_uskiftet_bo__c</fullName>
    <label>Hvem sidder i uskiftet bo?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>person_1_uskiftet_bo</fullName>
                <label>{person_1_first_name} {person_1_last_name}</label>
            </value>
            <value>
                <fullName>person_2_uskiftet_bo</fullName>
                <label>{person_2_first_name} {person_2_last_name}</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>