force-app/main/default/objects/df_journal_dk__c/fields/hvem_skal_modtage_et_belb__c.field-meta.xml
<CustomField>
    <fullName>hvem_skal_modtage_et_belb__c</fullName>
    <label>Hvem skal modtage et beløb?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>sumdeling_gtepagt_p1</fullName>
                <label>{person_1_first_name} {person_1_last_name}</label>
            </value>
            <value>
                <fullName>sumdeling_gtepagt_p2</fullName>
                <label>{person_2_first_name} {person_2_last_name}</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>