force-app/main/default/objects/df_journal_dk__c/fields/hvilken_dato_skal_srejet_blive_t_100__c.field-meta.xml
<CustomField>
    <fullName>hvilken_dato_skal_srejet_blive_t_100__c</fullName>
    <label>Hvilken dato skal særejet blive  756eb</label>
    <type>DateTime</type>
</CustomField>