force-app/main/default/objects/df_journal_dk__c/fields/hvilken_gteflle_udenland__c.field-meta.xml
<CustomField>
    <fullName>hvilken_gteflle_udenland__c</fullName>
    <label>Hvilken af ægtefællerne havde ud de9b2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_p1_udenland</fullName>
                <label>{person_1_first_name} {person_1_last_name}</label>
            </value>
            <value>
                <fullName>gtepagt_p2_udenland</fullName>
                <label>{person_2_first_name} {person_2_last_name}</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>