force-app/main/default/objects/df_journal_dk__c/fields/hvilken_kreditor__c.field-meta.xml
<CustomField>
    <fullName>hvilken_kreditor__c</fullName>
    <label>Hvilken kreditor?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>